Provide basic information about fork in main README and elaborate on details in the impl-maven project. Provide deployment script.

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,3 +1,6 @@
+[NOTE]
+==== Please note, this is only a fork of `shrinkwrap/resolver`, which solely affects the `maven/impl-maven` project. Please consult the README.md in that subfolder for details. ====
+
 = ShrinkWrap Resolvers image:https://travis-ci.org/shrinkwrap/resolver.svg["Build Status", link="https://travis-ci.org/shrinkwrap/resolver"]
 :toc:
 
